test/spec_vectors/store/fail/module_49.wat
(module (memory 1) (func (f64.store (f32.const 0) (f64.const 0))))